# art-project

./: .gitignore  CMakeLists.txt  README.md
dmx-controller/: README.md
dmx-controller/src/: automation.py  button_0.py  button_255.py  button_label_table.tsv  dmx_controller.py  dmx_controller.toe  slider_label_table.tsv  slider_table_handler.py
dmx-controller/src/gui/: slider_table_handler.py
dmx-controller/src/sidebar/: audio.py  button_255.py  button_label_table.tsv  fade.py  on_label_table_change.py  osc.py  rainbow.py  reset.py
dmx-controller/src/udmx/: exec_udmx_flush.py  udmx.py
dmx/src/: button_0.py  dmx_controller.toe
src/: config.h  lidar.cpp  lidar.h  main.cpp  osc.cpp  osc.h  utils.h
ydlidar-osc/: CMakeLists.txt  README.md
ydlidar-osc/src/: config.h  lidar.h  main.cpp  osc.cpp  osc.h  utils.cpp  utils.h
ydlidar-touch/: CMakeLists.txt  README.md
ydlidar-touch/src/: config.h  main.cpp  utils.cpp  utils.h
